<resources>
    <string name="app_name">AppliLac</string>
    <string name="btnMoyenneReleves">Moyenne des relevés</string>
    <string name="btnAfficherReleves">Liste des relevés</string>
    <string name="btnNewReleve">Nouveau relevé</string>
    <string name="temperature_lac">Température :</string>
    <string name="date_releve">Date :</string>
    <string name="heure_releve">Heure :</string>
    <string name="id_lac">Coordonnées :</string>
    <string name="table_layout_4_save">1</string>
    <string name="table_layout_4_open_shortcut">2</string>
    <string name="table_layout_4_open">3</string>
    <string name="table_layout_4_save_shortcut">4</string>
    <string name="menu_MoyenneReleve">Moyenne des relevés</string>
    <string name="menu_accueil">Accueil</string>
    <string name="menu_AfficherReleve">Afficher relevés</string>
    <string name="menu_NewReleve">Nouveau relevé</string>
    <string name="Coordonnees">Coord</string>
    <string name="MoyenneTemp">Moyenne Temp</string>
    <string name="ListeCoordonnees">Liste coord</string>
    <string name="ListeMoyenneTemp">Liste des moyennes</string>
    <string name="RadioButton6H">6h</string>
    <string name="RadioButton12H">12h</string>
    <string name="RadioButton18H">18h</string>
    <string name="RadioButton24H">24h</string>
    <string name="EditTextCoord">Coordonnées GPS</string>
    <string name="EditTextTemp">Température en C</string>
    <string name="ButtonEnregistrer">Enregistrer</string>
    <string name="ButtonAnnuler">Annuler</string>
    <string name="textviewTitre">Nouveau relevé</string>
    <string name="Temp6h">6h</string>
    <string name="Temp24h">24h</string>
    <string name="Temp18h">18h</string>
    <string name="Temp12h">12h</string>
    <string name="ListeReleve6h">Relevé à 6h</string>
    <string name="ListeReleve12h">Relevé à 12h</string>
    <string name="ListeRelev18h">Relevé à 18h</string>
    <string name="ListeRelev24h">Relevé à 24h</string>
    <string name="RadioButtonFarh">Farhenheit</string>
    <string name="RadioButtonCel">Celsius</string>
    <string name="btnValider">Valider</string>
    <string name="btnValiderNewReleve">Valider</string>
</resources>